fix(lyrics-plus): make invisible lyrics unclickable (#2013)

--- a/CustomApps/lyrics-plus/style.css
+++ b/CustomApps/lyrics-plus/style.css
@@ -174,6 +174,7 @@
 .lyrics-lyricsContainer-SyncedLyrics > :first-child,
 .lyrics-lyricsContainer-SyncedLyrics > :last-child {
 	opacity: 0;
+	pointer-events: none;
 }
 
 .lyrics-lyricsContainer-LyricsUnavailableMessage,
